libs/bng/test/negative/N0225_rxn_component_missing_on_patttern_side.bngl
# FAIL
# OUTPUT: error: Molecule used as pattern in reaction rule: Component(s) p missing from molecule A(a). Reported for reaction in the forward direction.
# OUTPUT: error: Molecule created in reaction rule: Component(s) p missing from molecule A(a). Reported for reaction in the reverse direction.

# NOTE: BNG2.pl reports Molecule created in reaction rule: Component(s) p missing from molecule A(a)

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a) + A(a) <-> A(a!1,p~0).A(a!1) kp, km
end reaction rules
